--- a/assets/scss/sections/_main.scss
+++ b/assets/scss/sections/_main.scss
@@ -1,5 +1,18 @@
 main {
     height: 100vh;
-    margin-left: 2em;
+    margin-left: 1em;
 }
-  
+
+button {
+    background-color: #FFF;
+    border: 0;
+    border-radius: 1em;
+    padding: 1em;
+    transition: 1.5s;
+}
+
+button:hover {
+    transform: scale(1.15);
+    background-color: rgb(90, 90, 90);
+    color: #FFF;
+}
