--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,4 +35,13 @@ button:hover {
   transform: scale(1.15);
   background-color: rgb(90, 90, 90);
   color: #FFF;
+}
+
+#cards article {
+  display: inline-block;
+  margin-inline: 5em;
+  text-align: center;
+}
+#cards article img {
+  height: 350px;
 }/*# sourceMappingURL=style.css.map */
