--- a/assets/scss/sections/_main.scss
+++ b/assets/scss/sections/_main.scss
@@ -16,3 +16,14 @@ button:hover {
     background-color: rgb(90, 90, 90);
     color: #FFF;
 }
+
+#cards article {
+    display: inline-block;
+
+    margin-inline: 5em;
+    text-align: center;
+
+    img {
+        height: 350px;
+    }
+}
