--- a/assets/scss/sections/_main.scss
+++ b/assets/scss/sections/_main.scss
@@ -12,7 +12,7 @@ button {
 }
 
 button:hover {
-    transform: scale(1.15);
+    transform: scale(1.03);
     background-color: rgb(90, 90, 90);
     color: #FFF;
 }
@@ -25,5 +25,23 @@ button:hover {
 
     img {
         height: 350px;
+    }
+}
+
+
+#cart {
+    margin-bottom: 3em;
+
+    div {
+        margin-bottom: 2em;
+    }
+
+    div p, div img {
+        display: inline-block;
+        margin-inline: 0.5em;
+    }
+
+    img {
+        height: 100px;
     }
 }
