--- a/assets/scss/sections/_header.scss
+++ b/assets/scss/sections/_header.scss
@@ -2,9 +2,9 @@ header {
     color: #FFF;
     background-color: rgb(219, 19, 22);
     border-bottom: rgb(219, 19, 22) 0.3em solid;
-    height: 4.5em;
+    height: 7vh;
 
     .logo {
-        height: 4.5em;
+        height: 7vh;
     }
 }
