--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,5 @@
 @import "mixins/_breakpoints";
+@import "variables/_color";
 @import "base/_reset";
 @import "base/base";
 @import "sections/_header";
