--- a/assets/scss/sections/_main.scss
+++ b/assets/scss/sections/_main.scss
@@ -4,27 +4,39 @@ main {
 }
 
 button {
-    background-color: #FFF;
+    background-color: $white;
     border: 0;
-    border-radius: 1em;
+    border-radius: 2em;
     padding: 1em;
     transition: 1.5s;
 }
 
 button:hover {
     transform: scale(1.03);
-    background-color: rgb(90, 90, 90);
-    color: #FFF;
+    background-color: $darkGray;
+    color: $white;
 }
 
-#cards article {
+#shop article {
     display: inline-block;
 
-    margin-inline: 5em;
+    margin-top: 2em;
+
+    @include BkpM {
+        margin-inline: 2em;
+    }
+    @include BkpS {
+        display: block;
+    }
+    
     text-align: center;
 
     img {
-        height: 350px;
+        height: 250px;
+    }
+
+    .amountInCart {
+        display: inline-block;
     }
 }
 
@@ -40,8 +52,10 @@ button:hover {
         }
 
         p, img {
-            display: inline-block;
-            margin-inline: 0.5em;
+            @include BkpM {
+                display: inline-block;
+                margin-inline: 0.5em;
+            }
         }
     }
 }
