--- a/assets/scss/variables/_color.scss
+++ b/assets/scss/variables/_color.scss
@@ -1,4 +1,5 @@
 $red: rgb(219, 19, 22);
 $white: rgb(255, 255, 255);
-$darkGray: rgb(90, 90, 90);
+$darkGray: rgb(70, 70, 70);
 $gray: rgb(200, 200, 200);
+$card: rgb(175, 175, 175)
