--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,129 +1,154 @@
+body {
+  font-family: "Arial", sans-serif;
+  background-color: #f5f5f5;
+  color: #333;
+  line-height: 1.6;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+h1, h3 {
+  color: #DB1316;
+}
+
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  background-color: rgb(200, 200, 200);
-}
-
 header {
-  width: 100vw;
-  background-color: rgb(219, 19, 22);
-  border-bottom: rgb(219, 19, 22) 0.3em solid;
-  height: 60px;
+  background-color: #DB1316;
+  padding: 1rem;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 header .logo {
-  height: 60px;
+  height: 50px;
 }
-@media screen and (min-width: 720px) {
-  header nav ul {
-    display: inline-flex;
-    margin-top: 1em;
-  }
+header nav ul {
+  list-style: none;
+  display: flex;
 }
 header nav ul li {
-  margin-inline: 2em;
-  list-style: none;
+  margin: 0 1rem;
 }
 header nav ul li a {
   text-decoration: none;
-  color: rgb(255, 255, 255);
-  font-size: 1.5em;
-}
-
-main {
-  min-height: 90vh;
-}
-
-button {
-  background-color: rgb(255, 255, 255);
-  border: 0;
-  border-radius: 2em;
-  padding: 1em;
-  transition: 1.5s;
-}
-
-button:hover {
-  transform: scale(1.03);
-  background-color: rgb(70, 70, 70);
-  color: rgb(255, 255, 255);
+  color: white;
+  font-weight: bold;
 }
 
 footer {
-  margin-left: 1em;
+  background-color: #DB1316;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+}
+footer .byAtfx {
+  color: white;
+  text-decoration: underline;
 }
 
-#shop article {
-  display: inline-block;
-  padding: 1em;
-  border-radius: 1.5em;
-  background-color: rgb(175, 175, 175);
+main {
+  padding: 2rem;
   text-align: center;
+  flex: 1;
 }
-@media screen and (min-width: 720px) {
-  #shop article {
-    margin-inline: 2em;
-  }
+main h1 {
+  margin-bottom: 2rem;
 }
-@media screen and (max-width: 719px) {
-  #shop article {
-    display: block;
-    width: 90%;
-    margin-inline: 5%;
-  }
+
+#shop {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-#shop article img {
-  height: 250px;
-  border-radius: 1.5em;
-}
-#shop article .amountInCart {
+#shop .product {
+  border: 2px solid #d4af37;
+  border-radius: 8px;
+  margin: 1rem;
+  padding: 1rem;
+  width: 250px;
+  text-align: center;
+  background-color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
   display: inline-block;
+}
+#shop .product:hover {
+  transform: scale(1.05);
+}
+#shop .product .product-img {
+  max-width: 100%;
+  border-radius: 5px;
+}
+#shop .product .product-title {
+  font-size: 1.2rem;
+  margin: 0.5rem 0;
+}
+#shop .product .product-price {
+  font-weight: bold;
+  color: #DB1316;
+}
+#shop .product .amountInCart {
+  display: inline-block;
+}
+#shop .product button {
+  background-color: #d4af37;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+  cursor: pointer;
+  border-radius: 5px;
+}
+#shop .product button:hover {
+  background-color: #b29126;
 }
 
 #cart {
-  margin-bottom: 3em;
-}
-#cart article {
-  display: inline-block;
+  background-color: #fff;
   padding: 1em;
-  border-radius: 1.5em;
-  background-color: rgb(175, 175, 175);
-  margin-bottom: 2em;
 }
-#cart article img {
-  height: 100px;
+#cart .product {
+  border: 2px solid #d4af37;
+  border-radius: 8px;
+  margin: 1rem;
+  padding: 1rem;
+  width: 250px;
+  text-align: center;
+  background-color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  display: inline-block;
 }
-@media screen and (min-width: 720px) {
-  #cart article p, #cart article img {
-    display: inline-block;
-    margin-inline: 0.5em;
-  }
+#cart .product:hover {
+  transform: scale(1.05);
 }
-@media screen and (max-width: 719px) {
-  #cart article, #cart div, #cart button {
-    display: block;
-    width: 90%;
-    margin-inline: 5%;
-  }
+#cart .product .product-img {
+  max-width: 100%;
+  border-radius: 5px;
 }
-@media screen and (min-width: 720px) {
-  #cart article, #cart div, #cart button {
-    margin-inline: 1em;
-  }
+#cart .product .product-title {
+  font-size: 1.2rem;
+  margin: 0.5rem 0;
 }
-#cart button {
-  margin-top: 1em;
+#cart .product .product-price {
+  font-weight: bold;
+  color: #DB1316;
 }
-
-h3 {
-  margin-bottom: 0.2em;
+#cart .buyCart {
+  background-color: #d4af37;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+  cursor: pointer;
+  border-radius: 5px;
 }
-
-h1 {
-  margin-left: 0.5em;
-  margin-bottom: 0.3em;
+#cart .buyCart:hover {
+  background-color: #b29126;
 }/*# sourceMappingURL=style.css.map */
