--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,3 +1,13 @@
 body {
-    background-color: $gray;
+    font-family: $font-family;
+    background-color: $color-background;
+    color: #333;
+    line-height: 1.6;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+h1, h3 {
+    color: $color-primary;
 }
