--- a/assets/scss/sections/_main.scss
+++ b/assets/scss/sections/_main.scss
@@ -1,17 +1,9 @@
 main {
-    min-height: 90vh;
-}
+    padding: 2rem;
+    text-align: center;
+    flex: 1;
 
-button {
-    background-color: $white;
-    border: 0;
-    border-radius: 2em;
-    padding: 1em;
-    transition: 1.5s;
-}
-
-button:hover {
-    transform: scale(1.03);
-    background-color: $darkGray;
-    color: $white;
+    h1 {
+        margin-bottom: 2rem;
+    }
 }
